--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -42,7 +42,7 @@ li.posts-item
               a(href='#') = post.user.username
 
             li.list-inline-item.mr-3
-              | #{time_ago_in_words(post.created_at)} ago
+              | #{time_ago_in_words(post.created_at)} temu
 
             li.list-inline-item
               a(href=build_post_path(post)) #{post.comments_count} komentarze
