--- a/app/views/posts/saved.html.slim
+++ b/app/views/posts/saved.html.slim
@@ -8,3 +8,6 @@
   ul.list-unstyled.posts-list
     - @bookmarks.each do |b|
       = render b.bookmarkable
+
+= content_for :after_content do
+  = paginate @posts
