--- a/app/views/posts/search.html.slim
+++ b/app/views/posts/search.html.slim
@@ -4,3 +4,6 @@
 = content_for :content_body do
   ul.list-unstyled.posts-list
     = render @posts
+
+= content_for :after_content do
+  = paginate @posts
