Move new post form to vue, close #4

--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,60 +1,56 @@
+- @sidebar_disabled = true
+
 = content_for :content_body do
   .p-4
     h1.h4.mb-3
       | Dodawanie posta
 
-    p.mb-5
+    p.mb-4
       | Wyślij link albo tekst aby rozpocząć dyskusję. Sprawdź wytyczne aby mieć
       |  pewność, że to co wrzucasz jest odpowiednie dla tej społeczności.
 
-    = simple_form_for @post, url: create_post_path, wrapper: :horizontal_form do |f|
-      / .row
-        / .col-9
-      = f.input :link, as: :post_link, placeholder: 'http://...', autofocus: true
-      / .col-3
-      /   label.control-label &nbsp;
-      /   a.btn.btn-outline-secondary.btn-block(href="#") Pobierz tytuł
+    hr.mb-4
 
-      = f.input :title, label:  'Tytuł posta', required: false
-      = f.input :tag_list, required: false
-      = f.input :description, as: :text, placeholder: 'Niewymagany jeśli wysyłasz linka'
+    new-post-form(
+      action=new_post_path
+      method="post"
+      csrf-token=form_authenticity_token
+      :post={link: @post.link, title: @post.title, tag_list: @post.tag_list, description: @post.description}.to_json
+      :full-error-messages=@post.errors.full_messages
+      :tags=ActsAsTaggableOn::Tag.all.map(&:name).to_json
+    )
 
-      .form-group.row.mb-0
-        label.col-sm-3.col-form-label
-        .col-sm-9
-          = f.submit 'Dodaj post', class: 'btn btn-success'
+  / javascript:
+  /   $(document).ready(function() {
+  /     var isFetchingTitle = false
 
-  javascript:
-    $(document).ready(function() {
-      var isFetchingTitle = false
+  /     $('#fetch-post-title').click(function(e) {
+  /       e.preventDefault()
 
-      $('#fetch-post-title').click(function(e) {
-        e.preventDefault()
+  /       var originalText = $(this).text()
 
-        var originalText = $(this).text()
+  /       if (isFetchingTitle) { return true }
+  /       isFetchingTitle = true
 
-        if (isFetchingTitle) { return true }
-        isFetchingTitle = true
+  /       $(this).text('Momencik...')
+  /       $(this).attr('disabled', 'disabled')
 
-        $(this).text('Momencik...')
-        $(this).attr('disabled', 'disabled')
+  /       var req = $.post('/api/internal/v1/posts/fetch_title', {
+  /         link: $('#post_link').val()
+  /       })
 
-        var req = $.post('/api/internal/v1/posts/fetch_title', {
-          link: $('#post_link').val()
-        })
+  /       req.done(function(data) {
+  /         $('#post_title').val(data.title)
+  /       })
 
-        req.done(function(data) {
-          $('#post_title').val(data.title)
-        })
+  /       req.fail(function(data) {
+  /         alert('Coś poszło nie tak. Spróbuj ponownie za chwilę.')
+  /       })
 
-        req.fail(function(data) {
-          alert('Coś poszło nie tak. Spróbuj ponownie za chwilę.')
-        })
-
-        req.always(function(data) {
-          isFetchingTitle = false
-          $('#fetch-post-title').text(originalText)
-          $(this).removeAttr('disabled')
-        })
-      })
-    })
+  /       req.always(function(data) {
+  /         isFetchingTitle = false
+  /         $('#fetch-post-title').text(originalText)
+  /         $(this).removeAttr('disabled')
+  /       })
+  /     })
+  /   })
