Sticky sidebar fix, closes #13

--- a/app/views/layouts/with_sidebar.html.slim
+++ b/app/views/layouts/with_sidebar.html.slim
@@ -24,7 +24,7 @@ html
 
 
           - unless @sidebar_disabled
-            .col.main-sidebar
+            .col.main-sidebar(data-js-sticky-sidebar)
               .main-sidebar__inner
                 - if content_for?(:sidebar)
                   = yield :sidebar
