--- a/app/views/events/_event.html.slim
+++ b/app/views/events/_event.html.slim
@@ -38,7 +38,10 @@ li.events-item
                   = image_tag post.user.avatar.thumb('50x50#').url
 
             li.list-inline-item.mr-3
-              a(href='#') = post.user.username
+              a(href='#')
+                = post.user.username
+                sub.ml-1(title="Karma")
+                  = post.user.karma
 
             li.list-inline-item.mr-3
               | #{time_ago_in_words(post.created_at)} temu
