--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,6 +192,65 @@ $post-voted-color: #28a745;
   color: #333;
 }
 
+.main-sidebar-cities {}
+
+.main-sidebar-city {
+  margin-bottom: 0.5em;
+}
+
+.main-sidebar-city a {
+  position: relative;
+  display: block;
+  height: 40px;
+  color: inherit;
+  transition: all .1s ease-in;
+
+  &:hover {
+    background: #f5f5f5;
+    transition: all .1s ease-in;
+  }
+}
+
+.main-sidebar-city-progress {
+  position: absolute;
+  top: 0; left: 0;
+  bottom: 0;
+  background: #fff;
+  border-radius: 3px;
+}
+
+.main-sidebar-city-content {
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  z-index: 1;
+  line-height: 40px;
+  padding-left: 1em;
+  width: 100%;
+  font-size: 0.9rem;
+}
+
+$main-sidebar-sity-count-size: 25px;
+.main-sidebar-city-count {
+  background: #f5f5f5;
+  width: $main-sidebar-sity-count-size;
+  display: inline-block;
+  text-align: center;
+  height: $main-sidebar-sity-count-size;
+  line-height: $main-sidebar-sity-count-size;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all .1s ease-in;
+}
+
+.main-sidebar-city a:hover .main-sidebar-city-count {
+  right: 0.5em;
+  transition: all .1s ease-in;
+  background: #fff;
+  border-radius: 3px;
+}
+
 /*  */
 
 .main-content-inner {
