--- a/app/views/events/_sidebar.html.slim
+++ b/app/views/events/_sidebar.html.slim
@@ -1,7 +1,15 @@
-= form_tag search_path, method: :get do
+= form_tag request.path, method: :get do
   .form-group
     input.form-control(type="search" placeholder="Szukaj..." name="q" value=params[:q])
 
-.list-group
-  = active_link_to 'Nadchodzące', events_path, active: :exclusive, class: 'list-group-item'
-  = active_link_to 'Minione', past_events_path, class: 'list-group-item'
+.main-sidebar-cities
+  h3.mt-4 Najpopularniejsze miasta
+  ul.list-unstyled
+    - @cities.each do |c|
+      li.main-sidebar-city
+        a(href=events_path(q: c[:name]))
+          .main-sidebar-city-progress(style="width: #{c[:percent]}%")
+          .main-sidebar-city-content
+            = c[:name]
+            span.main-sidebar-city-count
+              = c[:count]
