--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,5 +1,3 @@
-- @sidebar_disabled = true
-
 = content_for :content_nav do
   = render 'events/index_content_nav'
 
@@ -8,3 +6,6 @@
 
 = content_for :after_content do
   = paginate @posts
+
+= content_for :sidebar do
+  = render 'events/sidebar'
