Hide comment filtering links

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -22,7 +22,7 @@
           h2 #{@post.comments_count} komentarzy
 
         .col
-          ul.nav.justify-content-end
+          ul.nav.justify-content-end.d-none
             li.nav-item: a.nav-link.active(href="#") Najlepsze
             li.nav-item: a.nav-link(href="#") Najgorsze
             li.nav-item: a.nav-link(href="#") Najnowsze
