--- a/app/views/layouts/with_sidebar.html.slim
+++ b/app/views/layouts/with_sidebar.html.slim
@@ -53,3 +53,6 @@ html
                               | <human-date-time date-time="#{e.beginning_at.iso8601}"></human-date-time> - #{e.city}
                             h4
                               = e.post.title
+
+      footer.text-center
+        | <a href="http://hard-core.pl">hard-core.pl</a> / facebook: <a target="_blank" href="https://fb.com/hardcorepl">hardcorepl</a> / gh: <a target="_blank" href="https://github.com/mbajur/hcpl">hcpl</a>
