--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,59 +1,60 @@
 - auto_show = auto_show == true
 
-li.posts-item
-  post-bookmark-btn(
-    post-guid=post.token
-    :bookmarked=post.user_bookmarked?(current_user).to_s
-  )
-
-  .media
-    post-vote-btn(
+- cache([post, post.user]) do
+  li.posts-item
+    post-bookmark-btn(
       post-guid=post.token
-      :voted=post.user_voted?(current_user).to_s
-      :votes-count=post.votes_count.to_s
+      :bookmarked=post.user_bookmarked?(current_user).to_s
     )
 
-    .media-body
-      .media
-        - if post.thumb.present?
-          a.posts-item-thumb(href=post.path style="background-image: url(#{post.thumb.thumb('59x48#').url})")
+    .media
+      post-vote-btn(
+        post-guid=post.token
+        :voted=post.user_voted?(current_user).to_s
+        :votes-count=post.votes_count.to_s
+      )
 
-        .media-body.posts-item-content
-          h3.posts-item-title
-            a(href=post.link target="_blank")
-              = post.title
+      .media-body
+        .media
+          - if post.thumb.present?
+            a.posts-item-thumb(href=post.path style="background-image: url(#{post.thumb.thumb('59x48#').url})")
 
-            ul.list-inline.mb-0
-              - post.tags.each do |tag|
-                li.list-inline-item
-                  = link_to tag, tag_path(tag.slug), class: 'btn btn-outline-secondary btn-xs btn-tag'
+          .media-body.posts-item-content
+            h3.posts-item-title
+              a(href=post.link target="_blank")
+                = post.title
 
-          ul.list-inline.posts-item-meta
-            - if post.has_media? && post.media_previewable?
-              li.list-inline-item.mr-2.pr-1
-                post-preview-media-btn(post-token=post.token)
+              ul.list-inline.mb-0
+                - post.tags.each do |tag|
+                  li.list-inline-item
+                    = link_to tag, tag_path(tag.slug), class: 'btn btn-outline-secondary btn-xs btn-tag'
 
-            li.list-inline-item
-              a.posts-item-avatar(href='#')
-                - if post.user.avatar.present?
-                  = image_tag post.user.avatar.thumb('50x50#').url
+            ul.list-inline.posts-item-meta
+              - if post.has_media? && post.media_previewable?
+                li.list-inline-item.mr-2.pr-1
+                  post-preview-media-btn(post-token=post.token)
 
-            li.list-inline-item.mr-3
-              a(href='#')
-                = post.user.username
-                sub.ml-1(title="Karma")
-                  = post.user.karma
+              li.list-inline-item
+                a.posts-item-avatar(href='#')
+                  - if post.user.avatar.present?
+                    = image_tag post.user.avatar.thumb('50x50#').url
 
-            li.list-inline-item.mr-3
-              human-date-time(date-time=post.created_at.iso8601)
+              li.list-inline-item.mr-3
+                a(href='#')
+                  = post.user.username
+                  sub.ml-1(title="Karma")
+                    = post.user.karma
 
-            li.list-inline-item
-              a(href=build_post_path(post)) #{post.comments_count} komentarze
+              li.list-inline-item.mr-3
+                human-date-time(date-time=post.created_at.iso8601)
 
-      - if post.has_media? && post.media_previewable?
-        post-preview-media(
-          guid=post.media_guid
-          type=post.media_type
-          post-token=post.token
-          :auto-show=auto_show.to_s
-        )
+              li.list-inline-item
+                a(href=build_post_path(post)) #{post.comments_count} komentarze
+
+        - if post.has_media? && post.media_previewable?
+          post-preview-media(
+            guid=post.media_guid
+            type=post.media_type
+            post-token=post.token
+            :auto-show=auto_show.to_s
+          )
