--- a/app/views/posts/now.html.slim
+++ b/app/views/posts/now.html.slim
@@ -12,6 +12,6 @@
 
 = content_for :content_body do
   ul.list-unstyled.posts-list
-    = render @posts
+    = render partial: 'posts/post', collection: @posts, as: :post, cached: true
 
   = paginate @posts
