--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= render 'head' %>
+    <%= render 'layouts/head' %>
   </head>
 
   <body>
-    <%= render 'nav' %>
+    <%= render 'layouts/nav' %>
     <%= yield %>
   </body>
 </html>
