--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,4 +1,5 @@
 - auto_show = auto_show == true
+- user = post.user.decorate
 
 li.posts-item
   post-bookmark-btn(
@@ -7,16 +8,22 @@ li.posts-item
   )
 
   .media
-    post-vote-btn(
-      post-guid=post.token
-      :voted=post.user_voted?(current_user).to_s
-      :votes-count=post.votes_count.to_s
-    )
+    .posts-item-vote-wrap
+      post-vote-btn(
+        post-guid=post.token
+        :voted=post.user_voted?(current_user).to_s
+        :votes-count=post.votes_count.to_s
+      )
 
     .media-body
       .media
         - if post.thumb.present?
-          a.posts-item-thumb(href=post.path style="background-image: url(#{post.thumb.thumb('59x48#').url})")
+          a.posts-item-thumb(
+            href=post.path
+            style="background-image: url(#{post.thumb.thumb('59x48#').url})"
+            width="59"
+            height="48"
+          )
 
         .media-body.posts-item-content
           h3.posts-item-title
@@ -34,12 +41,12 @@ li.posts-item
                 post-preview-media-btn(post-token=post.token)
 
             li.list-inline-item
-              a.posts-item-avatar(href='#')
+              a.posts-item-avatar(href=user.profile_path)
                 - if post.user.avatar.present?
                   = image_tag post.user.avatar.thumb('50x50#').url
 
             li.list-inline-item.mr-3
-              a(href='#')
+              a(href=user.profile_path)
                 = post.user.username
                 sub.ml-1(title="Karma")
                   = post.user.karma
