--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-md-auto">
           <li class="nav-item">
-            <a class="nav-link" href="<%= root_path %>%">Posty</a>
+            <a class="nav-link" href="<%= root_path %>">Posty</a>
           </li>
 
           <li class="nav-item">
