homepage lead text, close #23

--- a/app/views/posts/now.html.slim
+++ b/app/views/posts/now.html.slim
@@ -8,7 +8,7 @@
 - else
   - @content_heading_variant = 'signup'
   = content_for :content_heading do
-    | Crater.io: the latest programming news lands here first!
+    | <strong>hard-core.pl</strong>: najświeższe newsy hc/punk
 
 = content_for :content_body do
   ul.list-unstyled.posts-list
