--- a/app/views/posts/_index_content_nav.html.slim
+++ b/app/views/posts/_index_content_nav.html.slim
@@ -1,6 +1,6 @@
 ul.list-inline.mb-0
   li.list-inline-item.dropdown
-    = active_link_to 'Popularne', posts_popular_this_month_path, class: 'dropdown-toggle', data: { toggle: 'dropdown' }, active: [['posts'], ['now', 'week', 'month', 'year']]
+    = active_link_to 'Popularne posty', posts_popular_this_month_path, class: 'dropdown-toggle', data: { toggle: 'dropdown' }, active: [['posts'], ['now', 'week', 'month', 'year']]
 
     .dropdown-menu
       = active_link_to 'Teraz', root_path, class: 'dropdown-item', active: :exclusive
