Better single hot event handling

--- a/app/assets/stylesheets/components/_hot_events.scss
+++ b/app/assets/stylesheets/components/_hot_events.scss
@@ -27,7 +27,8 @@
   float: left;
 }
 
-.hot-events > .row > .col-6 {
+.hot-events > .row > .col-6,
+.hot-events > .row > .col-12 {
   padding-right: 1em;
 
   &:last-child {
