Add google analytics

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -13,3 +13,5 @@
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'application' %>
 <%= stylesheet_pack_tag 'application' %>
+
+<%= render 'layouts/analytics' %>
