--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,13 @@ footer {
   border-radius: .2rem;
 }
 
+.btn-cta {
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
+  font-size: 14px;
+  padding: 0.7rem 1.2rem;
+  color: #616161;
+}
+
 $post-voted-color: #28a745;
 
 .btn-post-vote {
