--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -14,4 +14,6 @@
 <%= javascript_pack_tag 'application' %>
 <%= stylesheet_pack_tag 'application' %>
 
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 <%= render 'layouts/analytics' %>
