--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,10 @@
 <div class="nav-main bg-dark">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="<%= root_path %>">hard-core.pl</a>
+      <a class="navbar-brand" href="<%= root_path %>">
+        hard-core.pl
+        <span class="badge badge-pill badge-warning d-none d-md-inline-block">beta</span>
+      </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
